--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.7.0-rc.0",
     "add": "^2.0.6",
+    "axios": "^1.8.4",
     "code-editor": "file:",
     "framer-motion": "^12.6.5",
     "or": "^0.2.0",
